	- changed: emit a 'subsystem' level trace message when 
	 	   engine state changes to finished
	- changed: interactive mode - minor update to 'status' command
	  	   output
	- changed: compile libecasoundc as PIC code to make it possible
		   to use it from shared libraries; fixes problems 
		   with e.g. Audio::Ecasound on amd64 architecture ;
		   closes sfbug:2505551
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually
		 high CPU load)
	- fixed: 'dump-cop-value' did not work as documented
	- fixed: ECI - signal an error (e.g. eci_error() returns true)
		 if connection is lost to engine process (sync lost
	 	 or an other error)
	- fixed: ecasignalview - exit if engine reports an error
		 during operation
	- fixed: interactive mode - loop devices saved with incorrect 
		 syntax, affects cs-save, cs-save-as and cs-edit ; see
	 	 http://eca.cx/ecasound-list/2009/01/0058.html
	- fixed: problems when seeking back to start with setups using
		 loop devices; closes sfbug:2527049
	- fixed: segfault if using a tone generator input with a fixed
		 lenght, and a seek past the end of stream was performed
        - fixed: aac/ogg/mikmod/mid inputs - once object reached state 
		 'finished' (all samples played), it cannot be played 
		 again by reconnectin the chainsetup
	- fixed: combination of '--daemon' and '-C' (disable interactive
		 mode) had a bug that prevented processing of commands
		 received over the daemon socket while the engine 
		 was running the batchmode
	- fixed: a nasty bug in 'playat' implementation causing audible
		 artifacts ; see 
		 http://eca.cx/ecasound-list/2009/01/0089.html
24082008 (v2.5.2) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_2_relnotes.txt
	- fixed: bug in channel routing of LADSPA plugins that have
		 more audio output ports than input ports